# backend/api/gmail-api.go
@@ -25,6 +25,15 @@ func NewGmailAPI(controller controller.GmailController, apiRoutes *gin.RouterGro
 	return &api
 }
 
+// HandleServiceCallback godoc
+// @Summary give url to authenticate with gmail
+// @Description give url to authenticate with gmail
+// @Tags gmail route
+// @Accept json
+// @Produce json
+// @Success 200 {string} Bearer token
+// @Failure 500 {object} schemas.Response
+// @Router /gmail/auth [get]
 func (api *GmailAPI) RedirectToService(apiRoutes *gin.RouterGroup) {
 	apiRoutes.GET("/auth", func(ctx *gin.Context) {
 		authURL, err := api.controller.RedirectToService(ctx, apiRoutes.BasePath()+"/auth/callback")
@@ -36,17 +45,38 @@ func (api *GmailAPI) RedirectToService(apiRoutes *gin.RouterGroup) {
 	})
 }
 
+// HandleServiceCallback godoc
+// @Summary give url to authenticate with gmail
+// @Description give url to authenticate with gmail
+// @Tags gmail route
+// @Accept json
+// @Produce json
+// @Success 200 {object} schemas.Response
+// @Failure 500 {object} schemas.ErrorRespose
+// @Router /gmail/auth/callback [get]
 func (api *GmailAPI) HandleServiceCallback(apiRoutes *gin.RouterGroup) {
 	apiRoutes.GET("/auth/callback", func(ctx *gin.Context) {
-		github_token, err := api.controller.HandleServiceCallback(ctx, apiRoutes.BasePath()+"/auth/callback")
+		gmail_token, err := api.controller.HandleServiceCallback(
+			ctx,
+			apiRoutes.BasePath()+"/auth/callback",
+		)
 		if err != nil {
 			ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		} else {
-			ctx.JSON(http.StatusOK, gin.H{"access_token": github_token})
+			ctx.JSON(http.StatusOK, gin.H{"access_token": gmail_token})
 		}
 	})
 }
 
+// GetUserInfo godoc
+// @Summary give user info of gmail
+// @Description give user info of gmail
+// @Tags gmail route
+// @Accept json
+// @Produce json
+// @Success 200 {object} schemas.Response
+// @Failure 500 {object} schemas.ErrorRespose
+// @Router /gmail/info/user [get]
 func (api *GmailAPI) GetUserInfo(apiRoutes *gin.RouterGroup) {
 	apiRoutes.GET("/user", func(ctx *gin.Context) {
 		userInfo, err := api.controller.GetUserInfo(ctx)
